# planktonclass

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-pi10.txt  requirements.txt
.github/workflows/: README.md  gpu-integration.yml  integration.yml  tests.yml
PI10/: debug.py  predict_gpu_remote.py  test.py
docs/: installation.rst  notebooks.rst  quickstart.rst
planktonclass/: api.py  cli.py  runtime.py  test_utils.py  train_runfile.py  utils.py
scripts/: convert_checkpoint_to_h5.py  create_gpu_env.ps1  setup_gpu_linux.sh
tests/smoke/: test_cli_smoke.py  test_runtime_smoke.py
