[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "planktonclass"
description = "Phytoplankton image classification package with CLI, training, reports, and DEEPaaS API support"
# !! Authors and Authors_emails are taken from setup.py. Otherwise wrongly rendered !!
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "apache 2.0" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

# Add author and author email here
authors = [ {name= "Wout Decrop (VLIZ)", email= "wout.decrop@vliz.be"} ]
#authors-email = [ "wout.decrop@vliz.be"]

[project.urls]
"Homepage" = "https://github.com/lifewatch/planktonclass"
"Bug Tracker" = "https://github.com/lifewatch/planktonclass/issues"
"Documentation" = "https://planktonclass.readthedocs.io/en/latest/"

[project.scripts]
planktonclass = "planktonclass.cli:main"

[project.optional-dependencies]
gpu = [
    "tensorflow[and-cuda]==2.19.0; platform_system != 'Windows'",
    "tensorflow-directml-plugin; platform_system == 'Windows' and python_version < '3.11'",
]
notebooks = [
    "jupyterlab>=4,<5",
    "ipykernel>=7,<8",
    "nbformat>=5,<6",
    "nbconvert>=7,<8",
    "pywin32>=311; platform_system == 'Windows'",
]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["planktonclass*"]

[tool.setuptools.package-data]
planktonclass = [
    "resources/*.yaml",
    "resources/dataset_files/*",
    "resources/notebooks/*.ipynb",
    "resources/demo-images/*/*",
    "resources/data_transformation/*",
    "resources/data_transformation/*/*",
]



[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
planktonclass = "planktonclass.api"
